--- a/findly-builder/src/app/components/add-source/add-source.component.scss
+++ b/findly-builder/src/app/components/add-source/add-source.component.scss
@@ -1515,13 +1515,81 @@
         }
         .browserbyurl{
             .input-url-block{
-                padding: 100px 60px 101px 60px;
+                padding: 80px 60px 80px 60px;
                 margin-bottom: 15px;
                 border: 1px dashed #BDC1C6;
                 border-radius: 4px;
                 background: #FFFFFF;
+                min-height: 260px;
+                .info-upload-pdf{
+                    color: #07377F;
+                    font-weight: normal;
+                    font-size: 12px;                    
+                    display: flex;
+                    align-items: center;
+                    margin-top: 12px;
+                    img{
+                        margin-right: 12px;
+                    }
+                }
             }
         }
+        .browsebyfile {
+            .tooltip-text{
+                position: relative;
+                padding-right: 10px;
+                padding-left: 3px;
+                &:hover{
+                    .tooltiptext{
+                        visibility: visible;
+                        opacity: 1;
+                    }
+                }
+                .tooltiptext{
+                    visibility: hidden;
+                    position: absolute;
+                    color: #fff;
+                    z-index: 1;
+                    opacity: 0;
+                    transition: opacity .6s;
+                    background: #202124;
+                    box-shadow: 0px 4px 4px rgb(32 33 36 / 20%);
+                    border-radius: 4px;
+                    width: 266px;
+                    text-align: left;
+                    padding: 8px 10px 8px 15px;
+                    cursor: default;
+                    left: 22px;
+                    top: -8px;
+                    &::before{
+                        content: "";
+                        position: absolute;
+                        background: #202124;
+                        transform: rotate(45deg);
+                        width: 10px;
+                        height: 10px;
+                        top: 13px;
+                        left: -4px;
+                    }
+                    .t-text{
+                        color: #FFFFFF;
+                        font-weight: 600;
+                        font-size: 10px;
+                        line-height: 14px;
+                    }
+                    .learn_more{
+                        color: #0D6EFD;
+                        font-weight: normal;
+                        font-size: 12px;
+                        line-height: 20px;
+                        margin-top: 5px;
+                        display: inline-block;
+                        cursor: pointer;
+                    }
+                }
+            }
+        }
+        
     }
 }
 
