result RAnking selection

--- a/findly-builder/src/app/components/result-ranking/result-ranking.component.html
+++ b/findly-builder/src/app/components/result-ranking/result-ranking.component.html
@@ -102,7 +102,7 @@
                                                         <div class="desc">{{list.numberOfCustomisations}} customization</div>
                                                     </div>
                                                     <div class="title-desc-sec col-1" [ngClass] = "{'disableDiv' : permisionView }">
-                                                        <div class="restore-icon" (click) = "restore(list)" ><img class="action-icon" src="assets/icons/restore.svg" ngbTooltip='Restore' placement="top"></div>
+                                                        <div class="restore-icon" (click) = "restore(list)" ><img class="action-icon" src="assets/icons/restore.svg" ngbTooltip='Rest' placement="top"></div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -184,9 +184,9 @@
                                                         <img src="assets/icons/resultranking/pin.svg" [ngbTooltip]='actLog.customization.action' placement="top" *ngIf="actLog.customization.action == 'pinned'"class="cursor-pointer">
                                                         <img src="assets/icons/resultranking/eye.svg" [ngbTooltip]='actLog.customization.action' placement="top" *ngIf="actLog.customization.action == 'hidden'"class="cursor-pointer">
                                                         <div>
-                                                        <img src="assets/icons/resultranking/export-up.svg" [ngbTooltip]='actLog.customization.action' placement="top" *ngIf="actLog.customization.action == 'burried'"class="cursor-pointer boost-trans">
+                                                        <img src="assets/icons/resultranking/export-up.svg" [ngbTooltip]='actLog.customization.action' placement="top" *ngIf="actLog.customization.action == 'lowered'"class="cursor-pointer boost-trans">
                                                         <img src="assets/icons/resultranking/export-up.svg" [ngbTooltip]='actLog.customization.action' placement="top" *ngIf="actLog.customization.action == 'boosted'"class="cursor-pointer">
-                                                        <span *ngIf="actLog.customization.action == 'boosted' || actLog.customization.action == 'burried'" class="boost-font">{{actLog.customization.value}}</span>
+                                                        <span *ngIf="actLog.customization.action == 'boosted' || actLog.customization.action == 'lowered'" class="boost-font">{{actLog.customization.value}}</span>
                                                         </div>
                                                         
 
