--- a/findly-builder/src/app/helpers/components/useronboarding-journey/useronboarding-journey.component.scss
+++ b/findly-builder/src/app/helpers/components/useronboarding-journey/useronboarding-journey.component.scss
@@ -116,14 +116,15 @@
 
 .configured-dropdown{
     width: 393px;
-    position: fixed;
-    top: 70px;
-    z-index: 999;
+    position: absolute;
+    top: 0;
+    z-index: 1;
     left: 0;
     bottom: 0;
     margin: 0 auto;
     right: 0;
-    height:180px;
+    height: auto;
+    display: table;
     &:hover{
         .content-menu{
             display: block;
